# fstring-builder

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
fstring_builder/: __init__.py  enums.py  fstring.py  replacement_field.py
tests/: test_format_string.py  test_replacement_field.py
