[tool.poetry]
name = "fstring-builder"
version = "0.1.0"
description = "A human friendly format string builder"
authors = ["Tim van Boxtel <tim@vanboxtel.ca>"]
readme = "README.md"
packages = [{include = "fstring_builder"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
black = "^22.10.0"
flake8 = "^5.0.4"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
